// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolvers Mutations #addRoom returns a new room 1`] = `
Room {
  "currentTrack": null,
  "history": Array [],
  "id": "1",
  "name": "newRoom",
  "queue": Array [],
  "timer": null,
  "userSongs": Object {},
  "users": Array [],
}
`;

exports[`resolvers Mutations #joinRoom returns the updated room 1`] = `
Object {
  "currentTrack": null,
  "history": Array [],
  "id": "1",
  "join": [Function],
  "name": "test",
  "next": [Function],
  "queue": Array [],
  "queueTrack": [Function],
  "timer": null,
  "userSongs": Object {},
  "users": Array [],
}
`;

exports[`resolvers Mutations #nextTrack returns the room 1`] = `
Object {
  "currentTrack": null,
  "history": Array [],
  "id": "1",
  "join": [Function],
  "name": "test",
  "next": [Function],
  "queue": Array [],
  "queueTrack": [Function],
  "timer": null,
  "userSongs": Object {},
  "users": Array [],
}
`;

exports[`resolvers Mutations #queueTrack returns the new track 1`] = `
Object {
  "album": Object {
    "name": "albumname",
  },
  "artists": Array [
    Object {
      "name": "artist",
    },
  ],
  "duration": 30000,
  "name": "track",
  "spotifyUri": "6Inmo6ElDCaiZCiB6lficH",
  "user": "1337",
}
`;

exports[`resolvers Query #room finds one room using name 1`] = `
Object {
  "currentTrack": null,
  "history": Array [],
  "id": "1",
  "join": [Function],
  "name": "test",
  "next": [Function],
  "queue": Array [],
  "queueTrack": [Function],
  "timer": null,
  "userSongs": Object {},
  "users": Array [],
}
`;

exports[`resolvers Query #rooms returns current rooms 1`] = `Array []`;
